--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "AWSの短い説明書",
   "main": "index.js",
   "scripts": {
-    "lint": "textlint --experimental README.md SUMMARY.md tldr appendix",
+    "lint": "textlint --experimental README.md SUMMARY.md tldr appendix services",
     "serve": "gitbook serve",
     "build": "gitbook build",
     "test": "npm run lint && npm run build"
